<resources>
    <string name="app_name">Deceived</string>
    <string name="font_name_kefa">Kefa</string>
    <string name="font_name_manteka">Manteka</string>
    <string name="mm_btn1">NEW GAME</string>
    <string name="mm_btn2">CONTINUE</string>
    <string name="mm_btn3">OPTIONS</string>
    <string name="mm_btn4">RULES</string>
    <string name="mm_back_toast">Press the back button again to close the application.</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="dialog_message">Any previously saved game will be deleted</string>
    <string name="dialog_title">New Game?</string>
    <string name="setup_player_count_title">PLAYERS</string>
    <string name="setup_player_count_info_title">INFO</string>
    <string name="setup_player_count_info_players_title">Players</string>
    <string name="setup_player_count_info_players_text">Set the number of players in your party excluding the moderator (you)</string>
    <string name="setup_player_count_info_mafiaratio_title">Mafia Ratio</string>
    <string name="setup_player_count_info_mafiaratio_text">4 Townspeople:1 Mafia</string>
    <string name="setup_extra_roles_title">ROLES</string>
    <string name="setup_player_cards_title">CARDS</string>
    <string name="gameready_text">Are you ready?</string>
    <string name="rules_title">RULES</string>
    <string name="rules_btn1">TUTORIAL</string>
    <string name="rules_btn2">SCRIPT</string>
    <string name="rules_btn3">ROLES</string>
    <string-array name="script_slide_titles">
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:INTRO</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:STORY</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:NIGHT</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:SELECTION 1</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:SELECTION 2</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:SELECTION 3</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:DAY</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:RECAP</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:TRIBUNAL</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:RECAP AGAIN</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:REPEAT</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:END</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:EXAMPLE</item>
        <item>bkgdColor:black`|textSize:56`|textFont:Manteka`|textColor:white`|textGravity:center_vertical`|text:THE END</item>
    </string-array>
    <string name="script_slide_swipedir_default">@string/swipe_direction_horizontal</string>
    <string-array name="script_slide_swipedir">
    </string-array>
    <string-array name="script_slide_content">
        <item>layout:1`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:SO YOU WANT TO BE A MODERATOR?\n\nWELL IT\'S NOT THAT EASY&#8230;\n\nBUT WE CAN HELP YOU!!!</item>
        <item>layout:1`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:ONCE ALL PLAYERS (NOT INCLUDING YOU) FIND OUT THEIR ROLE FROM THE DEVICE,\n\n- SET THE SCENE\n- CREATE A SITUATION\n- MAKE IT FUN</item>
        <item>layout:1`|layoutColor:white`|text1Size:26`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"ONCE UPON A TIME, THERE WAS A GROUP OF STUDENTS WHO DECIDED TO SPEND A FEW NIGHTS IN A HOTEL.\n\nNOW THIS HOTEL DIDN\'T HAVE A GREAT REPUTATION, BUT IT WAS CHEAP, SO THE STUDENTS WERE LIKE \'EH&#8230; WE\'RE TIRED.\'\n\nWHEN THEY ARRIVED AT THE FRONT DESK, AN OLD MAN APPEARED AND SAID IN A HIGH SQUEAKY VOICE, \'HELLO. IT IS VERY NICE TO SEE YOU ALL THIS EVENING. SO FEW PEOPLE COME AROUND HERE. YOU WANT A ROOM YOU SAY? I HAVE THE PERFECT ONE. ROOM 1 RIGHT UP THESE STAIRS.\'\n\nEVEN THOUGH THE STUDENTS THOUGHT THE MAN WAS CREEPY, THEY WENT UP THE STAIRS ANYWAY FOR THEY WERE TIRED. WHEN THEY REACHED THE FIRST STEP OF THE STAIRWAY, THE OLD MAN YELLED, \'BEWARE OF THE CURSE!!!\'\n\nBUT REMEMBER, THESE ARE POOR, TIRED, AND SKEPTICAL STUDENTS&#8230; THEY WENT IN THE ROOM ANYWAY.\n\nWHEN THEY ENTERED THE ROOM, SOME OF THEM WERE CHANGED. THEY WERE NO LONGER THE SAME PEOPLE THEY ONCE WERE.\n\nA KILLER WAS AMONG THEM&#8230;\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:TELL YOUR PARTY TO CLOSE THEIR EYES`|img1:script_card_c3`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"NIGHT. ALL PLAYERS CLOSE YOUR EYES.\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:WHILE EVERYONE\'S EYES ARE CLOSED, CALL THE ROLE AT THE TOP OF THE SCREEN TO WAKE UP AND SELECT A TARGET`|img1:script_card_c4`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:2`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:bottom`|text1:\"MAFIA WAKE UP.\"\n\"POLICE WAKE UP.\"\n\"DOCTOR WAKE UP.\"`|text2Size:26`|text2Color:black`|text2Gravity:top`|text2:\"WHO DO YOU WANT TO KILL/INVESTIGATE/SAVE?\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:SELECT THE PLAYER\'S TARGET AND ASK THEM TO CLOSE THEIR EYES ONCE AGAIN`|img1:script_card_c5`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"_____ GO TO BED.\"</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:REPEAT THE PROCESS UNTIL ALL ROLE PLAYERS HAVE BEEN CALLED</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:ASK ALL PLAYERS TO WAKE UP`|img1:script_card_c6`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"DAY. ALL PLAYERS OPEN YOUR EYES.\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:TELL A STORY ABOUT WHO DIED AND HOW THEY DIED`|img1:script_card_c7`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"IN THE MORNING, BLOOD WAS FOUND&#8230;\"\n\n\"LAST NIGHT, THE MAFIA TRIED TO TAKE ____\'S LIFE, BUT HE WAS SAVED.\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:26`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:TELL YOUR REMAINING PARTY MEMBERS TO DISCUSS AND CHOOSE A MEMBER TO KILL\n\nONLY THEN CAN THERE BE A CHANCE TO KILL THE MAFIA`|img1:script_card_c8`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"NOW FIND THE KILLER IN OUR MIDSTS.\n\nWE WILL DO A MAJORITY VOTE.\n\nDON\'T BE A JERK.\n\nYES, WE MUST CHOOSE SOMEONE.\"</item>
        <item>layout:3`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:top`|text1:NOTIFY YOUR PARTY WHO WAS KILLED IN THE TRIBUNAL AS WELL AS THOSE WHO HAVE DIED IN PREVIOUS ROUNDS`|img1:script_card_c9`|img1MaxHeight:240`|img1ScaleType:fit_center</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"AT 5 IN THE MORNING, ____ DIED BY THE GUILLOTINE.\n\nLET US HOPE THEIR SACRIFICE WILL LEAD TO PEACE.\"</item>
        <item>layout:1`|layoutColor:white`|text1Size:40`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:JUST LIKE THE TUTORIAL, REPEAT THE NIGHT AND DAY CYCLES UNTIL THE CITIZENS OR MAFIA HAVE WON</item>
        <item>layout:1`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:ONCE AN END GAME SCENARIO HAS BEEN ACHIEVED, THE APP WILL REVEAL THE WINNER AND EACH PERSON\'S ROLE\n\nMAKE UP A CREATIVE END STORY TO WRAP UP THE GAME</item>
        <item>layout:1`|layoutColor:white`|text1Size:36`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:\"AND SO&#8230;\nTHE MAFIA WAS FOUND OUT AND THE CITIZENS RETURNED TO THEIR DAILY LIVES&#8230;\n\nTHE END&#8230;\"</item>
        <item>layout:1`|layoutColor:white`|text1Size:30`|text1Font:Manteka`|text1Color:black`|text1Gravity:center_vertical`|text1:THANKS FOR PLAYING!!!</item>
    </string-array>
    <string name="rules_roles_title">ROLES</string>
    <string name="role_name_citizen">CITIZEN</string>
    <string name="role_name_doctor">DOCTOR</string>
    <string name="role_name_mafia">MAFIA</string>
    <string name="role_name_moderator">MODERATOR</string>
    <string name="role_name_police">POLICE</string>
    <string name="pause_title">PAUSE</string>
    <string name="pause_btn1">HOME</string>
    <string name="pause_btn2">ROLES</string>
    <string name="pause_btn3">OPTIONS</string>
    <string name="pause_btn4">RULES</string>
    <string name="options_computer">Computer</string>
    <string name="options_sfx">Sound Effects</string>
    <string name="options_music">Music</string>
    <string name="options_info_title">INFO</string>
    <string name="options_info_computer">Choose whether to use automated voice for directions and a randomly generated story or not at all</string>
    <string name="options_info_sfx">Change the volume of the sound effects</string>
    <string name="options_info_music">Change the volume of the background music</string>
</resources>