<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bkgd_gradient"
    tools:context="com.illum.MafiaRising.OptionsInfo">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <RelativeLayout
            android:id="@+id/header_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_content_height">

            <include layout="@layout/reusable_back_btn"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/title"
                android:text="@string/options_info_title"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:font="@string/font_name_kefa"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="250dp"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/divider"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/header_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:padding="25dp"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/computer_title"
                android:text="@string/options_computer"
                android:textSize="30sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/computer_info"
                android:text="@string/options_info_computer"
                android:textSize="20sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_below="@+id/computer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/sfx_title"
                android:text="@string/options_sfx"
                android:textSize="30sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/sfx_info"
                android:text="@string/options_info_sfx"
                android:textSize="20sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_below="@+id/sfx_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/music_title"
                android:text="@string/options_music"
                android:textSize="30sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/music_info"
                android:text="@string/options_info_music"
                android:textSize="20sp"
                android:textColor="@color/grey"
                app:font="@string/font_name_kefa"
                android:gravity="center_vertical"
                android:layout_below="@+id/music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>