<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bkgd_grunge"
    tools:context=".RulesRoles">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <RelativeLayout
            android:id="@+id/header_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_content_height">

            <include layout="@layout/reusable_back_btn"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/title"
                android:text="@string/rules_roles_title"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:font="@string/font_name_kefa"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="250dp"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/divider"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/header_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:weightSum="@integer/layout_rulesroles_button_weightSum">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_citizen"
                android:text="@string/role_name_citizen"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick=""
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_doctor"
                android:text="@string/role_name_doctor"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick=""
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_mafia"
                android:text="@string/role_name_mafia"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick=""
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_moderator"
                android:text="@string/role_name_moderator"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick=""
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_police"
                android:text="@string/role_name_police"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick=""
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
