<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/bkgd_grunge"
    tools:context=".Pause">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <RelativeLayout
            android:id="@+id/header_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_content_height">

            <include layout="@layout/reusable_back_btn"/>

            <com.illum.MafiaRising.CustomFontTextView
                android:id="@+id/title"
                android:text="@string/pause_title"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:font="@string/font_name_kefa"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="250dp"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/divider"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/header_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:weightSum="@integer/layout_button_weightSum">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_1"
                android:text="@string/pause_btn1"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick="backMainMenu"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_2"
                android:text="@string/pause_btn2"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick="activityRoles"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_3"
                android:text="@string/pause_btn3"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick="activityOptions"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.illum.MafiaRising.CustomFontButton
                android:id="@+id/btn_4"
                android:text="@string/pause_btn4"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:font="@string/font_name_kefa"
                android:onClick="activityRules"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@drawable/btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>